--- a/DigineCss/styls.css
+++ b/DigineCss/styls.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url(assets/sylphietteOrangev3.png);
+    background: url(/assets/sylphietteOrangev3.png);
     background-size: cover;
     /* height: 100vh;
     width: 100vw; */
@@ -50,7 +50,7 @@ header {
 }
 
 .logo {
-    background-image: url(assets/wallpeperJapnees.jpg);
+    background-image: url(/assets/wallpeperJapnees.jpg);
     background-size: cover;
     background-position: center left;
     background-repeat: no-repeat;
